syntax = "proto3";

package greet;

option csharp_namespace = "GrpcProto";

service GrpcService {
    rpc FileUpLoad (stream FileUploadRequest) returns(FileUploadResponse);

    rpc FileDownload(FileDownloadRequest) returns(stream DataChunk);
}

message FileDownloadRequest {
  string fileName = 1;
}

message DataChunk {
    bytes data = 1;
    int64 size = 2;
}

message FileUploadRequest {
  oneof request {
      string file_name = 1;
      bytes chunk = 3;
    }
}

message FileUploadResponse {
  string name = 1;
  uint32 number_of_chunks = 2;
}
